# grpc_server

./: README.md  pyproject.toml
app/service/photocatalog/: protocol.py  service.py
internal/pb/: photocatalog_pb2.py  photocatalog_pb2.pyi  photocatalog_pb2_grpc.py
protos/: photocatalog.proto
